[metadata]
name = bbcgfx
version = 0.1.0
author = Chris Johns
author_email = chris@lessthan3.org.uk
description = BBC BASIC style graphics
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/c-jo/bbcgfx
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: RISC OS

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
